Included the wcPlay deps into the page. Removed the use of codemirror

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <title>Elevator Saga - the elevator programming game</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="font-awesome-4.1-1.0/css/font-awesome.min.css" type="text/css" media="all">
-    <link href='//fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="libs/codemirror/codemirror.css">
     <link rel="stylesheet" href="libs/codemirror/themes/solarized.css">
     <link rel="stylesheet" href="style.css" type="text/css" media="all">
+    
+    <link href='libs/ext/webcabin-play/Build/wcPlayEditor.min.css' rel='stylesheet' type='text/css'>
+    <link href='libs/ext/webcabin-menu/Build/wcMenu.min.css' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" src="libs/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="libs/lodash.min.js"></script>
@@ -16,6 +19,11 @@
     <script type="text/javascript" src="libs/codemirror/codemirror.js"></script>
     <script type="text/javascript" src="libs/codemirror/addon/edit/closebrackets.js"></script>
     <script type="text/javascript" src="libs/codemirror/mode/javascript/javascript.js"></script>
+    <script type="text/javascript" src="libs/ext/webcabin-play/Build/wcPlay.min.js"></script>
+    <script type="text/javascript" src="libs/ext/webcabin-play/Build/wcPlayEditor.min.js"></script>
+    <script type="text/javascript" src="libs/ext/webcabin-play/Build/wcPlayNodes.min.js"></script>
+    <script type="text/javascript" src="libs/ext/webcabin-menu/Build/wcMenu.min.js"></script>
+    <script type="text/javascript" src="libs/ext/webcabin-undo-manager/wcUndoManager.js"></script>
 
     <script type="text/javascript" src="libs/unobservable.js"></script>
 
