Initialized the play editor.

--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 <head>
     <title>Elevator Saga - the elevator programming game</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="font-awesome-4.1-1.0/css/font-awesome.min.css" type="text/css" media="all">
+    <!-- <link rel="stylesheet" href="font-awesome-4.1-1.0/css/font-awesome.min.css" type="text/css" media="all"> -->
+    <link rel="stylesheet" href="libs/ext/font-awesome/css/font-awesome.min.css" type="text/css" media="all">
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="libs/codemirror/codemirror.css">
-    <link rel="stylesheet" href="libs/codemirror/themes/solarized.css">
+    <!-- <link rel="stylesheet" href="libs/codemirror/codemirror.css"> -->
+    <!-- <link rel="stylesheet" href="libs/codemirror/themes/solarized.css"> -->
     <link rel="stylesheet" href="style.css" type="text/css" media="all">
     
     <link href='libs/ext/webcabin-play/Build/wcPlayEditor.min.css' rel='stylesheet' type='text/css'>
     <link href='libs/ext/webcabin-menu/Build/wcMenu.min.css' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" src="libs/jquery-2.1.1.min.js"></script>
+    <!-- <script type="text/javascript" src="libs/ext/jquery/dist/jquery.min.js"></script> -->
     <script type="text/javascript" src="libs/lodash.min.js"></script>
     <script type="text/javascript" src="libs/riot.js"></script>
 
-    <script type="text/javascript" src="libs/codemirror/codemirror.js"></script>
-    <script type="text/javascript" src="libs/codemirror/addon/edit/closebrackets.js"></script>
-    <script type="text/javascript" src="libs/codemirror/mode/javascript/javascript.js"></script>
+    <!-- <script type="text/javascript" src="libs/codemirror/codemirror.js"></script> -->
+    <!-- <script type="text/javascript" src="libs/codemirror/addon/edit/closebrackets.js"></script> -->
+    <!-- <script type="text/javascript" src="libs/codemirror/mode/javascript/javascript.js"></script> -->
+    <script type="text/javascript" src="libs/ext/webcabin-menu/Build/wcMenu.min.js"></script>
+    <script type="text/javascript" src="libs/ext/webcabin-undo-manager/wcUndoManager.js"></script>
     <script type="text/javascript" src="libs/ext/webcabin-play/Build/wcPlay.min.js"></script>
     <script type="text/javascript" src="libs/ext/webcabin-play/Build/wcPlayEditor.min.js"></script>
     <script type="text/javascript" src="libs/ext/webcabin-play/Build/wcPlayNodes.min.js"></script>
-    <script type="text/javascript" src="libs/ext/webcabin-menu/Build/wcMenu.min.js"></script>
-    <script type="text/javascript" src="libs/ext/webcabin-undo-manager/wcUndoManager.js"></script>
 
     <script type="text/javascript" src="libs/unobservable.js"></script>
 
@@ -174,8 +176,10 @@
         </div>
 
         <div class="codestatus"></div>
-        <div class="code">
-            <textarea name="Code" id="code"></textarea>
+        <div id="codecontainer">
+            <div id="code">
+            <!-- <textarea name="Code" id="code"></textarea> -->
+            </div>
         </div>
         <button id="button_reset" style="float: left">Reset</button>
         <button id="button_resetundo" style="float: left">Undo reset</button>
@@ -197,13 +201,13 @@
     </div>
 
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-56810935-1', 'auto');
-        ga('send', 'pageview');
+        // ga('create', 'UA-56810935-1', 'auto');
+        // ga('send', 'pageview');
     </script>
 </body>
 </html>
